<resources>
    <string name="app_name">Schiller-Lockdown</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="systemSettings">Systemeinstellungen</string>
    <string name="changeLauncher">Launcher ändern</string>
    <string name="changePIN">PIN ändern</string>
    <string name="newPIN">Neue PIN:</string>
    <string name="PIN">PIN</string>
    <string name="reenterNewPIN">PIN erneut eingeben:</string>
    <string name="setPIN">PIN festlegen</string>
    <string name="enterPIN">Bitte PIN eingeben:</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="wrong_pin">Falsche PIN!</string>
    <string name="PIN_changed_successfully">PIN erfolgreich geändert</string>
    <string name="PIN_not_identical">Bitte geben Sie in beiden Feldern die gleiche PIN ein.</string>
    <string name="PIN_too_short">Die PIN muss mindestens 4 Zeichen lang sein.</string>
    <string name="allowAndForbidApps">Apps erlauben und verbieten:</string>
    <string name="foregroundAppChecker_service">Schiller-Lockdown App-Überprüfung</string>
    <string name="activateBackgroundService">Hintergrundservice aktivieren (Schiller-Lockdown App-Überprüfung)</string>
    <string name="foregroundchecker_service_description">Schiller-Lockdown überprüft alle Apps, die in den Vordergrund kommen darauf, ob sie gesperrt sind und beendet diese, wenn nötig.</string>
    <string name="about">Über diese App</string>
    <string name="developed_by">Entwickelt von:</string>
    <string name="developers_name">Lukas Drescher</string>
    <string name="moreInformation">Weitere Informationen:</string>
    <string name="infoText">Schiller-Lockdown wurde für die Tablets des Friedrich-Schiller-Gymnasiums in Preetz (SH) entwickelt. Es soll die Nutzer daran hindern, Änderungen an der Konfiguration der Tablets vorzunehmen, und wurde mit dem Ziel entwickelt, möglichst einfach bedienbar zu sein.\nWICHTIG: Diese App befindet sich noch in der Testphase. Schreibt bitte bei Problemen eine E-Mail direkt an mich: lukas.drescher@fsg-preetz.org\nHINWEIS: Um die bestmögliche Sicherheit zu gewährleisten, muss die App-Überwachung in den Bedienungshilfen aktiviert werden.</string>
    <string name="lockscreen_undisableable">Der Sperrbildschirm konnte nicht deaktiviert werden.</string>
    <string name="status_bar_unblockable">Die Statusleiste konnte nicht geblockt werden.</string>
    <string name="icon">Appicon</string>
    <string name="status_bar_blocked">Die Statusleiste kann nicht benutzt werden.</string>
    <string name="txtVersion">Version:</string>
    <string name="version" translatable="false">1.0.1</string>
    <string name="show_message_when_status_bar_blocked">Benachrichtigung anzeigen, wenn die Statusleiste geblockt wurde</string>
    <string name="schiller_lockdown_activated">Schiller-Lockdown ist aktiviert.</string>
    <string name="cover_statusbar_completely">Angepasste Statusleiste benutzen</string>
    <string name="DownloadsDeleted">Alle Downloads wurden gelöscht.</string>
    <string name="deleteDownloadsAtMidnightAndOnStartup">Alle Downloads um Mitternacht und nach dem Systemstart automatisch löschen</string>
    <string name="currentTime">UHRZEIT</string>
    <string name="unknown_percentage">\??%</string>
    <string name="status_bar_settings">Statusleiste:</string>
    <string name="choose_status_bar_color">Farbe für die Statusleiste und die Titelzeilen der App wählen:</string>
    <string name="color_light_blue">Hellblau</string>
    <string name="color_dark_blue">Dunkelblau</string>
    <string name="color_black">Schwarz</string>
    <string name="error_schiller_quote">Hier sollte eigentlich ein Zitat Friedrich Schillers stehen&#8230;</string>
    <string name="quote_schiller">- Friedrich Schiller</string>
    <string-array name="schiller_quotes">
        <item>Das eben ist der Fluch der bösen Tat,\nDaß sie, fortzeugend, immer Böses muß gebären.</item>
        <item>Freiheit kann man einem zwar lassen, aber nicht geben.</item>
        <item>Was man nicht aufgibt, hat man nie verloren.</item>
        <item>Was nicht verboten ist, ist erlaubt.</item>
        <item>Dreifach ist der Schritt der Zeit:\nZögernd kommt die Zukunft hergezogen,\nPfeilschnell ist das Jetzt entflogen,\nEwig still steht die Vergangenheit. </item>
        <item>Dreifach ist des Raumes Maß:\nRastlos fort ohn Unterlaß\nStrebt die Länge; fort ins Weite\nEndlos gießet sich die Breite;\nGrundlos senkt die Tiefe sich.</item>
        <item>Und es wallet und siedet und brauset und zischt,\nWie wenn Wasser mit Feuer sich mengt,\nBis zum Himmel spritzet der dampfende Gischt,\nUnd Well auf Well sich ohn Ende drängt,\nUnd wie mit des fernen Donners Getose\nEntstürzt es brüllend dem finstern Schoße.</item>
    </string-array>
    <string name="pin_too_large">Die PIN ist zu groß.\\nBitte wählen Sie eine kleinere PIN.</string>
    <string name="app_locked">Diese App ist gesperrt</string>
    <string name="enter_code_to_unlock">Bitte Code eingeben, um den Schutz für fünf Minuten zu deaktivieren:</string>
    <string name="empty" />
    <string name="change_color_scheme">Farbschema ändern</string>
    <string name="select_color">Farbe wählen:</string>
    <string name="example_text">Beispieltext</string>
    <string name="yeah_ok">Ja, gut&#8230;</string>
    <string name="app_crashed">Schiller-Lockdown ist gerade abgestürzt.\nDas hätte jetzt vielleicht nicht unbedingt sein müssen, aber dafür lade ich dich zu einem kleinen Spiel ein:</string>
    <string name="oh_shit">Ach du sch***!</string>
</resources>
